# Aegis-CI

./: .gitignore  .pre-commit-config.yaml  GUIDE.md  INTEGRATION_GUIDE.md  README.md  SCENARIOS.md  app_vulnerable.py  pyproject.toml  test_secret.py
.github/workflows/: security.yml
examples/bsic-payment-api/: README.md  main.py
scripts/: banner.py  compliance_check.py  dlp_check.py  reporter.py
tests/: test_dlp.py
